--- a/Languages/Ruby/Ruby/Ruby.csproj
+++ b/Languages/Ruby/Ruby/Ruby.csproj
@@ -137,7 +137,7 @@
     </Reference>
     <Reference Include="System.Numerics, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" Condition="'$(TargetFrameworkVersion)' == 'v4.0' ">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SilverlightPath)\System.Numerics.dll</HintPath>
+      <HintPath>$(SilverlightSdkPath)\System.Numerics.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
