update ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-*_name_S*
+Snippets.debug.scripting.dll
+Snippets.debug.scripting.pdb
+Snippets.scripting.dll
+Languages/Ruby/Tests/Syntax/generated/*
+Languages/Ruby/Samples/Tutorial/Libs
+Hosts/Silverlight/Scripts/dlr.js
+bin
+Bin
+External
+External.LCA_RESTRICTED/Languages/Ruby/redist-libs/ironruby
+*.csproj.vspscc
+*.csproj.user
+*.vssscc
+*.log
+obj
+*_test_dest
+makefile
+sources
+*.proj
+*.suo
+*.sln.cache
+*.vshost.exe
+*.vshost.exe.manifest
+.eprj
+*_S*
+1
+rubyspec_temp
